Fix Ahrefs issues (redirects, meta, hreflang, schema)

--- a/en/blog-1/index.html
+++ b/en/blog-1/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>eToro guide 2025 — how it works, fees & regulation | avis-invest.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="2025 sourced guide to eToro: how it works, regulation (CySEC/FCA/ASIC), fees (stocks, crypto 1% commission, FX conversion, withdrawals), CopyTrader™, Smart Portfolios, risks & responsible investing.">
+  <meta name="description" content="2025 sourced eToro guide: regulation, key fees, CopyTrader/Smart Portfolios, risks and best practices.">
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="canonical" href="https://avis-invest.com/en/blog-1/">
