--- a/en/blog-2/index.html
+++ b/en/blog-2/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://avis-invest.com/en/blog-2/">
   <link rel="alternate" href="https://avis-invest.com/en/blog-2/" hreflang="en">
   <link rel="alternate" href="https://avis-invest.com/blog-2/" hreflang="fr">
-  <link rel="alternate" href="https://avis-invest.com/en/blog-2/" hreflang="x-default">
+  <link rel="alternate" href="https://avis-invest.com/blog-2/" hreflang="x-default">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
@@ -87,7 +87,7 @@
       CFDs are complex instruments and come with a high risk of losing money rapidly due to leverage.
       <strong>61% of retail investor accounts lose money</strong> when trading CFDs with this provider.
       Consider whether you understand how CFDs work and whether you can afford to take the high risk of losing your money.
-      <a class="risk-link" href="/en/sources/etoro-en#risk" target="_blank" rel="noopener">See eToro risk warning (EU)</a>
+      <a class="risk-link" href="/sources/etoro-en#risk" target="_blank" rel="noopener">See eToro risk warning (EU)</a>
     </p>
   </div>
 
