--- a/en/legal-notice/index.html
+++ b/en/legal-notice/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Legal notice | avis-invest.com (E-Com Shop SASU)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Legal notice of avis-invest.com: publisher (E-Com Shop SASU), hosting (Netlify, Inc., San Francisco, USA), intellectual property, liability, cookies, personal data and contact.">
+  <meta name="description" content="Legal notice for avis-invest.com: publisher, hosting, intellectual property, liability, privacy/cookies and contact.">
   <meta name="robots" content="index,follow">
   <meta name="google" content="notranslate">
   <link rel="icon" type="image/png" href="/images/favicon.png">
