--- a/en/privacy-policy/index.html
+++ b/en/privacy-policy/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Privacy Policy | avis-invest.com (GDPR)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="avis-invest.com Privacy Policy: GDPR, cookies (Consent Mode v2), GA4, YouTube embeds, eToro affiliation, international transfers, your rights and DPO contact.">
+  <meta name="description" content="avis-invest.com Privacy Policy: GDPR, cookies (Consent Mode v2), analytics (GA4/YouTube), transfers, your rights and contact.">
   <meta name="robots" content="index,follow">
   <meta name="google" content="notranslate">
   <link rel="icon" type="image/png" href="/images/favicon.png">
@@ -63,15 +63,21 @@
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
-    "@type":"PrivacyPolicy",
+    "@type":"WebPage",
     "name":"Privacy Policy",
     "url":"https://avis-invest.com/en/privacy-policy/",
     "inLanguage":"en",
+    "isPartOf":{"@type":"WebSite","name":"avis-invest.com","url":"https://avis-invest.com/"},
+    "about":{
+      "@type":"Organization",
+      "name":"E-Com Shop (SASU)",
+      "identifier":{"@type":"PropertyValue","propertyID":"SIREN","value":"934934308"}
+    },
     "publisher":{
       "@type":"Organization",
       "name":"E-Com Shop (SASU)",
-      "identifier":"SIREN 934934308",
-      "url":"https://avis-invest.com/en/",
+      "identifier":{"@type":"PropertyValue","propertyID":"SIREN","value":"934934308"},
+      "url":"https://avis-invest.com/",
       "email":"contact.ecomshopfrance@gmail.com",
       "address":{
         "@type":"PostalAddress",
