--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Mentions légales | avis-invest.com (E-Com Shop SASU)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mentions légales d'avis-invest.com : éditeur (E-Com Shop SASU), hébergeur Netlify, propriété intellectuelle, responsabilités, cookies, données personnelles, contact.">
+  <meta name="description" content="Mentions légales avis-invest.com : éditeur, hébergeur, propriété intellectuelle, responsabilités, données personnelles et contact.">
   <meta name="robots" content="index,follow">
   <meta name="google" content="notranslate">
   <link rel="icon" type="image/png" href="/images/favicon.png">
