--- a/politiques-de-confidentialite/index.html
+++ b/politiques-de-confidentialite/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Politique de confidentialité | avis-invest.com (RGPD)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Politique de confidentialité d'avis-invest.com : RGPD, cookies (Consent Mode v2), GA4, YouTube, affiliation eToro, transferts hors UE, droits des personnes et contact DPO.">
+  <meta name="description" content="Politique de confidentialité avis-invest.com : RGPD, cookies (Consent Mode v2), analytics (GA4/YouTube), transferts, droits et contact.">
   <meta name="robots" content="index,follow">
   <meta name="google" content="notranslate">
   <link rel="icon" type="image/png" href="/images/favicon.png">
@@ -63,14 +63,20 @@
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
-    "@type":"PrivacyPolicy",
+    "@type":"WebPage",
     "name":"Politique de confidentialité",
     "url":"https://avis-invest.com/politiques-de-confidentialite/",
     "inLanguage":"fr",
+    "isPartOf":{"@type":"WebSite","name":"avis-invest.com","url":"https://avis-invest.com/"},
+    "about":{
+      "@type":"Organization",
+      "name":"E-Com Shop (SASU)",
+      "identifier":{"@type":"PropertyValue","propertyID":"SIREN","value":"934934308"}
+    },
     "publisher":{
       "@type":"Organization",
       "name":"E-Com Shop (SASU)",
-      "identifier":"SIREN 934934308",
+      "identifier":{"@type":"PropertyValue","propertyID":"SIREN","value":"934934308"},
       "url":"https://avis-invest.com/",
       "email":"contact.ecomshopfrance@gmail.com",
       "address":{
