--- a/sources/etoro-en.html
+++ b/sources/etoro-en.html
@@ -6,11 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>eToro official references – Summary (EN)</title>
   <meta name="robots" content="index,follow">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="canonical" href="https://avis-invest.com/sources/etoro-en">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="fr">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-en" hreflang="en">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="x-default">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://avis-invest.com/sources/etoro-en">
+  <meta property="og:title" content="eToro official references – Summary (EN)">
+  <meta property="og:description" content="Official eToro references (EN): EU risk warning, account opening, regulation, fees, conversions and withdrawals.">
+  <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
+  <meta property="og:image:width" content="800">
+  <meta property="og:image:height" content="400">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="fr_FR">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="eToro official references – Summary (EN)">
+  <meta name="twitter:description" content="Official eToro references (EN): EU risk warning, regulation, fees and withdrawals.">
+  <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
+
   <link rel="stylesheet" href="/style.min.css">
   <style>
     body { max-width: 960px; margin: 0 auto; padding: 32px 18px; line-height: 1.7; font-size: 1.05rem; }
     header { margin-bottom: 32px; }
     header h1 { font-size: 2rem; margin-bottom: 12px; }
+    nav { margin: 10px 0 0; }
+    nav a { color: inherit; }
     section { margin-bottom: 36px; }
     section h2 { font-size: 1.55rem; margin-bottom: 10px; }
     code { word-break: break-all; }
@@ -26,6 +51,9 @@
       Original URLs are shown as plain text so you can copy and paste them in your browser.
       Direct outbound links are disabled to avoid the HTTP&nbsp;403 errors raised by automated SEO audits.
     </p>
+    <nav class="note" aria-label="Site navigation">
+      <a href="/en/">Home</a> · <a href="/en/blog/">Blog</a> · <a href="/sources/etoro-fr" hreflang="fr">Français</a>
+    </nav>
     <p class="note">Last verification: 31&nbsp;October&nbsp;2025.</p>
   </header>
 
