--- a/sources/etoro-fr.html
+++ b/sources/etoro-fr.html
@@ -6,11 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Références officielles eToro – Synthèse (FR)</title>
   <meta name="robots" content="index,follow">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="canonical" href="https://avis-invest.com/sources/etoro-fr">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="fr">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-en" hreflang="en">
+  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="x-default">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://avis-invest.com/sources/etoro-fr">
+  <meta property="og:title" content="Références officielles eToro – Synthèse (FR)">
+  <meta property="og:description" content="Références officielles eToro (FR) : avertissement de risques UE, ouverture de compte, régulation, frais, conversions et retraits.">
+  <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
+  <meta property="og:image:width" content="800">
+  <meta property="og:image:height" content="400">
+  <meta property="og:locale" content="fr_FR">
+  <meta property="og:locale:alternate" content="en_US">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Références officielles eToro – Synthèse (FR)">
+  <meta name="twitter:description" content="Synthèse (FR) : avertissement de risques UE, régulation, frais et retraits eToro.">
+  <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
+
   <link rel="stylesheet" href="/style.min.css">
   <style>
     body { max-width: 960px; margin: 0 auto; padding: 32px 18px; line-height: 1.65; font-size: 1.05rem; }
     header { margin-bottom: 32px; }
     header h1 { font-size: 2rem; margin-bottom: 12px; }
+    nav { margin: 10px 0 0; }
+    nav a { color: inherit; }
     section { margin-bottom: 36px; }
     section h2 { font-size: 1.55rem; margin-bottom: 10px; }
     code { word-break: break-all; }
@@ -26,6 +51,9 @@
       Les URL d'origine sont indiquées en clair afin que vous puissiez les copier-coller dans votre navigateur.
       Les liens directs ont été neutralisés pour éviter les erreurs HTTP&nbsp;403 détectées par les audits SEO.
     </p>
+    <nav class="note" aria-label="Navigation du site">
+      <a href="/">Accueil</a> · <a href="/blog/">Blog</a> · <a href="/sources/etoro-en" hreflang="en">English</a>
+    </nav>
     <p class="note">Dernière vérification des contenus&nbsp;: 31&nbsp;octobre&nbsp;2025.</p>
   </header>
 
