SEO: optimize homepage metadata

--- a/en/index.html
+++ b/en/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>eToro review 2025 | Fees, safety & how to invest</title>
+  <title>eToro Review | Fees, Safety &amp; CopyTrading for Beginners</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Discover eToro: real stocks at 0% commission, explore CopyTrader, Smart Portfolios and crypto where allowed. Guide covers fees, regulations and key risks.">
+  <meta name="description" content="eToro review: CopyTrading, stocks (0% commission where available), crypto, fees, regulation and safety. Step-by-step guide + key risks to know.">
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="canonical" href="https://avis-invest.com/en/">
@@ -15,8 +15,8 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://avis-invest.com/en/">
-  <meta property="og:title" content="eToro: Simple investing – 2025 Guide (avis-invest.com)">
-  <meta property="og:description" content="How it works, fees, regulations (CySEC/FCA/ASIC), pros & limits. CFD risk warning included.">
+  <meta property="og:title" content="eToro Review | Fees, Safety &amp; CopyTrading for Beginners">
+  <meta property="og:description" content="How CopyTrading works, fees, regulation and key risks. Clear guide to get started the right way.">
   <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
   <meta property="og:image:width" content="800">
   <meta property="og:image:height" content="400">
@@ -25,8 +25,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="eToro: Simple investing – 2025 Guide (avis-invest.com)">
-  <meta name="twitter:description" content="Real stocks 0% commission (non-CFD), CopyTrader™, Smart Portfolios, crypto (by region).">
+  <meta name="twitter:title" content="eToro Review | Fees, Safety &amp; CopyTrading for Beginners">
+  <meta name="twitter:description" content="CopyTrading, stocks (0% commission where available), fees and key risks. Practical guide to get started.">
   <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
 
   <!-- Styles -->
@@ -127,7 +127,7 @@
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>eToro: invest more simply, <span class="nowrap">with clarity</span></h1>
+          <h1>eToro review: invest more simply, <span class="nowrap">with clarity</span></h1>
           <p class="lead">
             Multi-asset platform with real stocks at 0% commission (<em>non-CFD</em>), CopyTrader™ to mirror investors' portfolios,
             and Smart Portfolios for thematic exposure – <strong>availability varies by country</strong>.
