--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>eToro : avis & guide 2025 | Frais, sécurité, comment investir</title>
+  <title>Avis eToro | Guide, frais, sécurité &amp; CopyTrading (débutant)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Découvrez eToro : actions à 0 % de commission, explorez CopyTrader, Smart Portfolios et crypto selon le pays. Guide 2025: frais, régulations et risques clés.">
+  <meta name="description" content="Avis eToro : CopyTrading, actions (0% commission selon pays), crypto, frais, sécurité et régulation. Guide pas à pas + risques pour bien débuter.">
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="canonical" href="https://avis-invest.com/">
@@ -15,8 +15,8 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://avis-invest.com/">
-  <meta property="og:title" content="eToro : investir facilement – Guide 2025 (avis-invest.com)">
-  <meta property="og:description" content="Fonctionnement, frais, régulations (CySEC/FCA/ASIC), atouts & limites. Avertissements sur les risques CFD.">
+  <meta property="og:title" content="Avis eToro | Guide, frais, sécurité &amp; CopyTrading (débutant)">
+  <meta property="og:description" content="CopyTrading, actions (0% commission selon pays), frais, régulation et risques clés. Guide clair pour débuter.">
   <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
   <meta property="og:image:width" content="800">
   <meta property="og:image:height" content="400">
@@ -25,8 +25,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="eToro : investir facilement – Guide 2025 (avis-invest.com)">
-  <meta name="twitter:description" content="Actions 0% de commission (hors CFD), CopyTrader™, Smart Portfolios, crypto (selon pays).">
+  <meta name="twitter:title" content="Avis eToro | Guide, frais, sécurité &amp; CopyTrading (débutant)">
+  <meta name="twitter:description" content="CopyTrading, actions (0% commission selon pays), frais et risques clés. Guide pas à pas pour démarrer.">
   <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
 
   <!-- Styles -->
@@ -127,7 +127,7 @@
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>eToro : investir plus simplement, <span class="nowrap">en toute transparence</span></h1>
+          <h1>Avis eToro : investir plus simplement, <span class="nowrap">en toute transparence</span></h1>
           <p class="lead">
             Plateforme multi-actifs avec actions réelles à 0&nbsp;% de commission (<em>hors CFD</em>), CopyTrader™ pour copier des portefeuilles d'investisseurs,
             et Smart&nbsp;Portfolios pour des thèmes d'investissement — <strong>la disponibilité varie selon les pays</strong>.
