Update homepage footer + sitemap lastmod

--- a/index.html
+++ b/index.html
@@ -420,7 +420,15 @@
         <a class="btn cta" href="/sources/etoro-fr#ouvrir-compte" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" target="_blank" rel="sponsored noopener">Commencer sur eToro</a>
       </div>
     </div>
-  </footer>
+  
+<!-- site-network:start -->
+  <div class="site-network" style="margin-top:14px;padding-top:12px;border-top:1px solid rgba(128,128,128,.35);">
+    <div class="container" style="font-size:0.95rem;line-height:1.4;">
+      <p style="margin:0;"><strong>Nos autres sites :</strong> Découvrir <a href="https://cityscootlab.com/" target="_blank" rel="noopener">cityscootlab.com</a> · <a href="https://creativeai-tools.com/" target="_blank" rel="noopener">creativeai-tools.com</a> · <a href="https://creativeai-tools.fr/" target="_blank" rel="noopener">creativeai-tools.fr</a></p>
+    </div>
+  </div>
+<!-- site-network:end -->
+</footer>
 
   <!-- Bannière cookies (pro) -->
   <div id="cookie-banner" class="cookie-banner" hidden>
