Add Admitad verification

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <meta name="verify-admitad" content="0ded44064b" />
   <title>Avis eToro | Guide, frais, sécurité &amp; CopyTrading (débutant)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Avis eToro : CopyTrading, actions (0% commission selon pays), crypto, frais, sécurité et régulation. Guide pas à pas + risques pour bien débuter.">
